--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
        
         <div id="container-menu">
             <a href="index.html"><div class="palabras-menu"><h3>Home</h3></div></a>
-            <a href="file:///Users/blancarodriguez-loras/Desktop/IRONHACK/SEMANA%20CODIGO/PORTFOLIO_2/contact.html"><div class="palabras-menu"><h3>Contact</h3></div></a>
+            <a href="contact.html"><div class="palabras-menu"><h3>Contact</h3></div></a>
         </div>
 
     </header>
