--- a/index.html
+++ b/index.html
@@ -86,6 +86,46 @@
 
             </div>
         </a>
+         <a href="https://www.behance.net/gallery/104402055/Art-Direction-BBVA?" target="blank">
+ 
+            <div class="proyecto ">
+                <div class="texto-proyectos">
+                    <h2>ART DIRECTION: BBVA</h2>
+                    <p>This is an advertising campaign for BBVA. 
+                        The product is the new app of BBVA where you can have
+                        all your credit cards in the same app, doesn't matter the bank.
+                    </p>
+                </div>
+
+                <div class="imagen-proyecto">
+                    <img src="images/img-bbva.png" alt="bbva-img">
+                </div>
+
+            </div>
+        </a>
+
+
+        <a href="https://www.behance.net/gallery/104403383/Art-Direction-PETA" target="blank">
+ 
+            <div class="proyecto ">
+                <div class="texto-proyectos">
+                    <h2>ART DIRECTION: PETA</h2>
+                    <p>This is an advertising campaign for PETA. 
+                        We wanted to make a critic to the abuse 
+                        animals receive when makeup is tested on them. 
+                        So we made some prints like magazine covers with 
+                        headlines like advertising of some makeup products 
+                        but with how the animals suffer during those tests.
+                    </p>
+                </div>
+
+                <div class="imagen-proyecto">
+                    <img src="images/img-peta.png" alt="peta-img">
+                </div>
+
+            </div>
+        </a>
+        
     </main>
 
 </body>
