--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
         
        <div class="informacion">
             <p class="contactos">Hey there! My name is Blanca Rodríguez-Loras. <br>I am UX/UI designer based in Madrid with bakcground in advertising as an Art Director. <br>If you liked anything that you saw, send me an email!</p>
-            <a href="mailto:rodriguezlorasblanca@gmail.com?Subject=Hey%20there!" target="_top"><h3 class="contactos">Correo</h3></a>
+            <a href="mailto:rodriguezlorasblanca@gmail.com?Subject=Hey%20there!" target="_top"><h3 class="contactos">Mail</h3></a>
             <a href="https://www.linkedin.com/in/blanca-rodr%C3%ADguez-loras-calzas/" target="blank"><h3 class="contactos">Linkedin</h3></a>
             <a href="https://www.instagram.com/blanch.psd/" target="blank"><h3 class="contactos">Instagram</h3></a>
             <a href="https://medium.com/@rodriguezlorasblanca" target="blank"><h3 class="contactos">Medium</h3></a>
