--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
        
         <div id="container-menu">
             <a href="index.html"><div class="palabras-menu"><h3>Home</h3></div></a>
-            <a href="contact.html"><div class="palabras-menu"><h3>Contact</h3></div></a>
+            <a href="file:///Users/blancarodriguez-loras/Desktop/IRONHACK/SEMANA%20CODIGO/PORTFOLIO_2/contact.html"><div class="palabras-menu"><h3>Contact</h3></div></a>
         </div>
 
     </header>
 
     <main>
 
-        <div>
+        <div class="info">
             <p>Blanca Rodríguez-Loras <br> UX/UI Designer <br> Art Director</p>
         </div>
 
@@ -86,7 +86,9 @@
 
             </div>
         </a>
-         <a href="https://www.behance.net/gallery/104402055/Art-Direction-BBVA?" target="blank">
+
+
+        <a href="https://www.behance.net/gallery/104402055/Art-Direction-BBVA?" target="blank">
  
             <div class="proyecto ">
                 <div class="texto-proyectos">
@@ -125,7 +127,6 @@
 
             </div>
         </a>
-        
     </main>
 
 </body>
