--- a/index.html
+++ b/index.html
@@ -1,132 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blanca R-Loras 🔥</title>
-    <link rel="stylesheet" href="style/reset.css">
-    <link rel="stylesheet" href="style/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;500;600;700&display=swap" rel="stylesheet">
-
-</head>
-
-<body>
-    <header>
-        <div>
-            <a href="index.html"><img id="logo-brl" src="images/logo-brl-2_Mesa de trabajo 1 copia.svg" alt="logo-blanca-rodriguez-loras"></a>
-        </div>
-       
-        <div id="container-menu">
-            <a href="index.html"><div class="palabras-menu"><h3>Home</h3></div></a>
-            <a href="contact.html"><div class="palabras-menu"><h3>Contact</h3></div></a>
-        </div>
-
-    </header>
-
-    <main>
-
-        <div class="info">
-            <p>Blanca Rodríguez-Loras <br> UX/UI Designer <br> Art Director</p>
-        </div>
-
-
-       <a href="https://www.behance.net/gallery/102862967/SNKR-KEEPR?" target="_blank">
-            <div class="proyecto ">
-                <div class="texto-proyectos">
-                    <h2>SNKR-KEEPR</h2>
-                    <p>In this project I wanted to help sneakerheads with the problems they have when it comes to knowing all the shoes they have. Spoiler: there are usually more than 100 pairs. </p>
-                </div>
-
-                <div class="imagen-proyecto">
-                    <img src="images/img-snkrs.png" alt="snkr-keeor-img">
-                </div>
-
-            </div>
-        </a>
-        <a href="https://www.behance.net/gallery/103130909/SEXEALTH" target="_blank">
-            <div class="proyecto ">
-                <div class="texto-proyectos">
-                    <h2>SALUDSEXALL</h2>
-                    <p>This project aims to help with questions about sexual health that may arise with a database taken from professionals and with access to chat consults with professionals.</p>
-                </div>
-
-                <div class="imagen-proyecto">
-                    <img src="images/img-salud.png" alt="saludsexall-img">
-                </div>
-
-            </div>
-         </a>
-
-         <a href="https://www.behance.net/gallery/103206503/ABACO-LIBRARY" target="_blank">
-            <div class="proyecto ">
-                <div class="texto-proyectos">
-                    <h2>REDISEÑO LIBRERÍAS ÁBACO</h2>
-                    <p> This project planned the redesign of a library website and the creation of an app for it. This website was chosen due to the complexity of the organization of the books it had. </p>
-                </div>
-
-                <div class="imagen-proyecto">
-                    <img src="images/img-abaco.png" alt="abaco-img">
-                </div>
-
-            </div>
-         </a>
-
-         <a href="https://www.behance.net/gallery/103254897/BIZUM-GROUPS?" target="blank">
- 
-            <div class="proyecto ">
-                <div class="texto-proyectos">
-                    <h2>ADD FEATURE: BIZUM</h2>
-                    <p> This project focuses on adding a feature to a spanish banking app that is about instant transactions between friends. </p>
-                </div>
-
-                <div class="imagen-proyecto">
-                    <img src="images/img-bizum.png" alt="bizum-img">
-                </div>
-
-            </div>
-        </a>
-
-
-        <a href="https://www.behance.net/gallery/104402055/Art-Direction-BBVA?" target="blank">
- 
-            <div class="proyecto ">
-                <div class="texto-proyectos">
-                    <h2>ART DIRECTION: BBVA</h2>
-                    <p>This is an advertising campaign for BBVA. 
-                        The product is the new app of BBVA where you can have
-                        all your credit cards in the same app, doesn't matter the bank.
-                    </p>
-                </div>
-
-                <div class="imagen-proyecto">
-                    <img src="images/img-bbva.png" alt="bbva-img">
-                </div>
-
-            </div>
-        </a>
-
-
-        <a href="https://www.behance.net/gallery/104403383/Art-Direction-PETA" target="blank">
- 
-            <div class="proyecto ">
-                <div class="texto-proyectos">
-                    <h2>ART DIRECTION: PETA</h2>
-                    <p>This is an advertising campaign for PETA. 
-                        We wanted to make a critic to the abuse 
-                        animals receive when makeup is tested on them. 
-                        So we made some prints like magazine covers with 
-                        headlines like advertising of some makeup products 
-                        but with how the animals suffer during those tests.
-                    </p>
-                </div>
-
-                <div class="imagen-proyecto">
-                    <img src="images/img-peta.png" alt="peta-img">
-                </div>
-
-            </div>
-        </a>
-    </main>
-
-</body>
+Ooops! This webpage doesn't exist anymore. You can find Blanca's Portfolio here now <a href="blancaloras.com">blancaloras.com</a>
