--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-Ooops! This webpage doesn't exist anymore. You can find Blanca's Portfolio here now <a href="blancaloras.com">blancaloras.com</a>
+Ooops! This webpage doesn't exist anymore. You can find Blanca's Portfolio here now <a href="www.blancaloras.com">blancaloras.com</a>
