--- a/index.html
+++ b/index.html
@@ -10,4 +10,4 @@
     <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;500;600;700&display=swap" rel="stylesheet">
 
 </head>
-Ooops! This webpage doesn't exist anymore. You can find Blanca's Portfolio here now <a href="www.blancaloras.com">blancaloras.com</a>
+Ooops! This webpage doesn't exist anymore. You can find Blanca's Portfolio here now <a href="https://www.blancaloras.com/">blancaloras.com</a>
